// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ConsoleIo/Print Block Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots ConsoleIo/Print Block Existing Data Block 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots ConsoleIo/Print Block Non Starting Block 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots ConsoleIo/Read Block Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots ConsoleIo/Read Block Existing Data Block 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots ConsoleIo/Read Block Existing Data Non Starting Block 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots Core/Log Block Plain Default 1`] = `<!---->`;

exports[`Storyshots Core/Log Block Plain Existing Data Block 1`] = `<!---->`;

exports[`Storyshots Core/Log Block Styled Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots Core/Log Block Styled Existing Data Block 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots Core/Log Block Styled Existing Data Non Starting Block 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots Core/Output Block Styled Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots Core/Run Another Flow Block Styled Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots Core/Set Contact Property Clear Action 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots Core/Set Contact Property Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots Core/Set Contact Property Existing Data Block 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots Core/Set Group Membership Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots Core/Set Group Membership Existing Data Block 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots Flow/Flow Editor Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots Flow/Flow Editor Existing Data Pre Filled 1`] = `
<div>
  <div
    class="viamo-app-container flow-builder-sidebar-editor-container"
    id="viamo-app"
  >
    <div
      class="container-full"
    >
      <div
        class="main-content-container"
      >
        <section
          id="tree-app"
        >
          <div
            class="edit-tree"
            id="tree-interaction-designer"
          >
            <div
              class="interaction-designer-contents panel panel-default"
            >
              <div
                class="hidden-print hidden-xs hidden-sm tree-sidebar-menu-container"
              >
                <nav
                  class="bs-docs-sidebar"
                >
                  <div
                    class="tree-sidebar-menu"
                    id="tree-sidebar"
                  >
                    <div
                      class="tree-sidebar-edit-flow"
                      data-for-flow-id="fake-uuid-0"
                    >
                      <div
                        class="flow-editor"
                      >
                        <h3
                          class="no-room-above"
                        >
                          
    Edit Flow
  
                        </h3>
                         
                        <fieldset>
                          <div
                            class="row"
                          >
                            <div
                              class="col-12"
                            >
                              <div
                                class="validation-message form-group"
                                id="flow/fake-uuid-0/name"
                              >
                                <div
                                  class="form-group flow-label"
                                >
                                  <div
                                    class=""
                                  >
                                    <label
                                      class="text-primary"
                                    >
                                      Flow label
                                    </label>
                                     
                                    <textarea
                                      class="form-control"
                                      placeholder="Enter flow label"
                                      rows="1"
                                    />
                                     
                                  </div>
                                </div>
                                 
                                <!---->
                              </div>
                               
                              <div
                                class="validation-message form-group"
                                id="flow/fake-uuid-0/interaction_timeout"
                              >
                                <div
                                  class="form-group flow-interaction-timeout"
                                >
                                  <div
                                    class="number-editor"
                                  >
                                    <label
                                      class="text-primary mb-0"
                                    >
                                      Interaction timeout
                                    </label>
                                     
                                    <div
                                      class="small mb-2"
                                    >
                                      
                                    </div>
                                     
                                    <div>
                                      <input
                                        class="form-control"
                                        min="0"
                                        placeholder="Enter value"
                                        type="number"
                                      />
                                    </div>
                                     
                                  </div>
                                </div>
                                 
                                <!---->
                              </div>
                            </div>
                             
                            <div
                              class="col-12"
                            >
                              <div
                                class="validation-message form-group"
                                id="flow/fake-uuid-0/languages"
                              >
                                <div
                                  class="form-group flow-languages"
                                >
                                  <label
                                    class="text-primary"
                                  >
                                    Languages
                                  </label>
                                   
                                  <div
                                    class="checkbox"
                                  >
                                    <label
                                      class="font-weight-normal"
                                    >
                                      <input
                                        class="flow-language-toggle-checkbox"
                                        type="checkbox"
                                        value="[object Object]"
                                      />
                                      

      English
    
                                    </label>
                                  </div>
                                  <div
                                    class="checkbox"
                                  >
                                    <label
                                      class="font-weight-normal"
                                    >
                                      <input
                                        class="flow-language-toggle-checkbox"
                                        type="checkbox"
                                        value="[object Object]"
                                      />
                                      

      French
    
                                    </label>
                                  </div>
                                </div>
                                 
                                <!---->
                              </div>
                               
                              <div
                                class="validation-message form-group"
                                id="flow/fake-uuid-0/supported_modes"
                              >
                                <div
                                  class="form-group flow-modes"
                                >
                                  <label
                                    class="text-primary"
                                  >
                                    Modes
                                  </label>
                                   
                                  <div
                                    class="checkbox"
                                  >
                                    <label
                                      class="font-weight-normal"
                                    >
                                      <input
                                        class="flow-mode-toggle-checkbox"
                                        type="checkbox"
                                        value="TEXT"
                                      />
                                      
      Text
    
                                    </label>
                                  </div>
                                  <div
                                    class="checkbox"
                                  >
                                    <label
                                      class="font-weight-normal"
                                    >
                                      <input
                                        class="flow-mode-toggle-checkbox"
                                        type="checkbox"
                                        value="SMS"
                                      />
                                      
      SMS
    
                                    </label>
                                  </div>
                                  <div
                                    class="checkbox"
                                  >
                                    <label
                                      class="font-weight-normal"
                                    >
                                      <input
                                        class="flow-mode-toggle-checkbox"
                                        type="checkbox"
                                        value="USSD"
                                      />
                                      
      USSD
    
                                    </label>
                                  </div>
                                  <div
                                    class="checkbox"
                                  >
                                    <label
                                      class="font-weight-normal"
                                    >
                                      <input
                                        class="flow-mode-toggle-checkbox"
                                        type="checkbox"
                                        value="IVR"
                                      />
                                      
      IVR
    
                                    </label>
                                  </div>
                                  <div
                                    class="checkbox"
                                  >
                                    <label
                                      class="font-weight-normal"
                                    >
                                      <input
                                        class="flow-mode-toggle-checkbox"
                                        type="checkbox"
                                        value="RICH_MESSAGING"
                                      />
                                      
      Rich messaging
    
                                    </label>
                                  </div>
                                  <div
                                    class="checkbox"
                                  >
                                    <label
                                      class="font-weight-normal"
                                    >
                                      <input
                                        class="flow-mode-toggle-checkbox"
                                        type="checkbox"
                                        value="OFFLINE"
                                      />
                                      
      Offline
    
                                    </label>
                                  </div>
                                </div>
                                 
                                <!---->
                              </div>
                            </div>
                          </div>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </nav>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots InteractionDesigner/Toolbar Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots InteractionDesigner/Toolbar Edit Flow 1`] = `
<div>
  <div
    class="viamo-app-container flow-builder-sidebar-editor-container"
    id="viamo-app"
  >
    <div
      class="container-full"
    >
      <div
        class="main-content-container"
      >
        <section
          id="tree-app"
        >
          <div
            class="edit-tree"
            id="tree-interaction-designer"
          >
            <div
              class="interaction-designer-contents panel panel-default"
            >
              <div
                class="tree-builder-toolbar d-flex flex-column"
              >
                <div
                  class="tree-builder-toolbar-main-menu d-flex flex-column"
                >
                  <!---->
                   
                  <div
                    class="tree-workspace-panel-heading panel-heading w-100"
                  >
                    <div
                      class="tree-workspace-panel-heading-contents"
                    >
                      <div
                        class="btn-toolbar"
                      >
                        <h4
                          class="text-primary mr-4 flow-label"
                          title=""
                        >
                          
            
          
                        </h4>
                         
                        <div>
                          <a
                            aria-current="page"
                            class="mr-2 router-link-exact-active router-link-active"
                            href="#/"
                            title="Home"
                          >
                            <svg
                              aria-hidden="true"
                              class="fa-btn svg-inline--fa fa-home fa-w-16"
                              data-icon="home"
                              data-prefix="fac"
                              focusable="false"
                              role="img"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                class=""
                                d="M9.38843 22.559V15.3539H14.6058V22.559C14.6058 23.3515 15.1927 24 15.9101 24H19.8231C20.5405 24 21.1275 23.3515 21.1275 22.559V12.4719H23.3448C23.9448 12.4719 24.2318 11.6506 23.7753 11.2183L12.871 0.367457C12.3754 -0.122486 11.6188 -0.122486 11.1232 0.367457L0.218936 11.2183C-0.224539 11.6506 0.0493717 12.4719 0.649367 12.4719H2.86674V22.559C2.86674 23.3515 3.45369 24 4.17108 24H8.08409C8.80148 24 9.38843 23.3515 9.38843 22.559Z"
                                fill="currentColor"
                              />
                            </svg>
                          </a>
                           
                          <a
                            class="btn btn-primary btn-sm mr-2"
                            href="#/flows/new"
                          >
                            
              New Flow
            
                          </a>
                           
                          <button
                            class="btn btn-outline-primary btn-sm"
                          >
                            
              Edit Flow
            
                          </button>
                           
                          <!---->
                           
                          <div
                            class="vertical-divider"
                          />
                           
                          <!---->
                           
                          <div
                            class="btn-group"
                          >
                            <a
                              class="btn btn-outline-primary btn-sm active"
                              href="#/trees/1/interaction-designer/view"
                              title="Click to toggle editing"
                            >
                              
                View Mode
              
                            </a>
                             
                            <a
                              class="btn btn-outline-primary btn-sm"
                              href="#/trees/1/interaction-designer/edit"
                              title="Click to toggle editing"
                            >
                              
                Edit Mode
              
                            </a>
                          </div>
                           
                        </div>
                         
                        <div
                          class="ml-auto mr-2"
                        >
                          <!---->
                           
                          <div
                            class="btn-group mr-2"
                          />
                           
                          <button
                            class="btn btn-outline-primary btn-sm"
                          >
                            
              Export
            
                          </button>
                           
                          <!---->
                        </div>
                      </div>
                    </div>
                  </div>
                   
                  <!---->
                </div>
                 
                <div
                  class="tree-builder-toolbar-alerts w-100"
                >
                  <!---->
                   
                  <main
                    class="error-notifications-wrapper"
                  >
                    <!---->
                     
                    <!---->
                  </main>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots InteractionDesigner/Toolbar With Extra Buttons Slot 1`] = `
<div>
  <div
    class="viamo-app-container flow-builder-sidebar-editor-container"
    id="viamo-app"
  >
    <div
      class="container-full"
    >
      <div
        class="main-content-container"
      >
        <section
          id="tree-app"
        >
          <div
            class="edit-tree"
            id="tree-interaction-designer"
          >
            <div
              class="interaction-designer-contents panel panel-default"
            >
              <div
                class="tree-builder-toolbar d-flex flex-column"
              >
                <div
                  class="tree-builder-toolbar-main-menu d-flex flex-column"
                >
                  <!---->
                   
                  <div
                    class="tree-workspace-panel-heading panel-heading w-100"
                  >
                    <div
                      class="tree-workspace-panel-heading-contents"
                    >
                      <div
                        class="btn-toolbar"
                      >
                        <h4
                          class="text-primary mr-4 flow-label"
                          title=""
                        >
                          
            
          
                        </h4>
                         
                        <div>
                          <a
                            aria-current="page"
                            class="mr-2 router-link-exact-active router-link-active"
                            href="#/"
                            title="Home"
                          >
                            <svg
                              aria-hidden="true"
                              class="fa-btn svg-inline--fa fa-home fa-w-16"
                              data-icon="home"
                              data-prefix="fac"
                              focusable="false"
                              role="img"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                class=""
                                d="M9.38843 22.559V15.3539H14.6058V22.559C14.6058 23.3515 15.1927 24 15.9101 24H19.8231C20.5405 24 21.1275 23.3515 21.1275 22.559V12.4719H23.3448C23.9448 12.4719 24.2318 11.6506 23.7753 11.2183L12.871 0.367457C12.3754 -0.122486 11.6188 -0.122486 11.1232 0.367457L0.218936 11.2183C-0.224539 11.6506 0.0493717 12.4719 0.649367 12.4719H2.86674V22.559C2.86674 23.3515 3.45369 24 4.17108 24H8.08409C8.80148 24 9.38843 23.3515 9.38843 22.559Z"
                                fill="currentColor"
                              />
                            </svg>
                          </a>
                           
                          <a
                            class="btn btn-primary btn-sm mr-2"
                            href="#/flows/new"
                          >
                            
              New Flow
            
                          </a>
                           
                          <button
                            class="btn btn-outline-primary btn-sm"
                          >
                            
              Edit Flow
            
                          </button>
                           
                          <!---->
                           
                          <div
                            class="vertical-divider"
                          />
                           
                          <a
                            class="btn btn-outline-primary btn-sm"
                            href="#/trees/1/resource-viewer"
                          >
                            
                Resources view
              
                          </a>
                           
                          <div
                            class="vertical-divider"
                          />
                           
                          <div
                            class="btn-group"
                          >
                            <a
                              class="btn btn-outline-primary btn-sm"
                              href="#/trees/1/interaction-designer/view"
                              title="Click to toggle editing"
                            >
                              
                View Mode
              
                            </a>
                             
                            <a
                              class="btn btn-outline-primary btn-sm active"
                              href="#/trees/1/interaction-designer/edit"
                              title="Click to toggle editing"
                            >
                              
                Edit Mode
              
                            </a>
                          </div>
                           
                          <a
                            class="btn btn-success btn-sm ml-4"
                            disabled="disabled"
                            href="#"
                            title="another grouped button"
                          >
                            
           Action X
        
                          </a>
                           
                          <a
                            class="btn btn-warning btn-sm"
                            href="#"
                            title="another grouped button"
                          >
                            
           Action Y
        
                          </a>
                        </div>
                         
                        <div
                          class="ml-auto mr-2"
                        >
                          <!---->
                           
                          <div
                            class="btn-group mr-2"
                          />
                           
                          <button
                            class="btn btn-outline-primary btn-sm"
                          >
                            
              Export
            
                          </button>
                           
                          <button
                            class="btn btn-info btn-sm tree-save-tree ml-4"
                            title="Save changes to the flow"
                            type="button"
                          >
                            
              Save
            
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                   
                  <div
                    class="tree-workspace-panel-heading panel-heading w-100 bg-white d-flex justify-content-start pt-0 pb-0"
                  >
                    <div
                      class="tree-workspace-panel-heading-contents"
                    >
                      <ul
                        class="nav"
                      >
                        <li
                          class="nav-item dropdown nav"
                        >
                          <a
                            aria-expanded="false"
                            aria-haspopup="true"
                            class="nav-link dropdown-toggle"
                            data-toggle="dropdown"
                            href="#"
                            role="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="fa-btn big-icon svg-inline--fa fa-content fa-w-16"
                              data-icon="content"
                              data-prefix="fac"
                              focusable="false"
                              role="img"
                              viewBox="0 0 32 32"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                class=""
                                d="M23 4v0c0.552 0 1 0.448 1 1v23c0 0.552-0.448 1-1 1h-14c-0.552 0-1-0.448-1-1v-23c0-0.552 0.448-1 1-1h14zM9 3c-1.105 0-2 0.895-2 2v0 23c0 1.105 0.895 2 2 2v0h14c1.105 0 2-0.895 2-2v0-23c0-1.105-0.895-2-2-2v0h-14z M19.7 7v0c0.552 0 1 0.448 1 1v13c0 0.552-0.448 1-1 1h-7.2c-0.552 0-1-0.448-1-1v-13c0-0.552 0.448-1 1-1h7.2zM12.5 6c-1.105 0-2 0.895-2 2v0 13c0 1.105 0.895 2 2 2v0h7.2c1.105 0 2-0.895 2-2v0-13c0-1.105-0.895-2-2-2v0h-7.2zM16 27v0c-0.552 0-1-0.448-1-1s0.448-1 1-1v0c0.552 0 1 0.448 1 1s-0.448 1-1 1zM16 28c1.105 0 2-0.895 2-2s-0.895-2-2-2v0c-1.105 0-2 0.895-2 2s0.895 2 2 2v0z"
                                fill="currentColor"
                              />
                            </svg>
                             
                            <span
                              class="nav-link-text"
                            >
                              Content
                            </span>
                          </a>
                           
                          <div
                            class="dropdown-menu mt-0"
                          >
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="MobilePrimitives.Message"
                              href="#"
                            >
                              
                  Message
                
                            </a>
                            <div
                              class="dropdown-divider"
                            />
                             
                            <a
                              class="dropdown-item"
                              data-block-type="MobilePrimitives.SelectOneResponse"
                              href="#"
                            >
                              
                  Select One Response
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="MobilePrimitives.SelectManyResponse"
                              href="#"
                            >
                              
                  Select Many Responses
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="MobilePrimitives.NumericResponse"
                              href="#"
                            >
                              
                  Numeric Response
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="MobilePrimitives.OpenResponse"
                              href="#"
                            >
                              
                  Open Response
                
                            </a>
                            <div
                              class="dropdown-divider"
                            />
                             
                            <a
                              class="dropdown-item"
                              data-block-type="SmartDevices.LocationResponse"
                              href="#"
                            >
                              
                  Location Response
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="SmartDevices.PhotoResponse"
                              href="#"
                            >
                              
                  Photo Response
                
                            </a>
                             
                          </div>
                        </li>
                         
                        <li
                          class="nav-item dropdown"
                        >
                          <a
                            aria-expanded="false"
                            aria-haspopup="true"
                            class="nav-link dropdown-toggle"
                            data-toggle="dropdown"
                            href="#"
                            role="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="fa-btn big-icon svg-inline--fa fa-contact fa-w-16"
                              data-icon="contact"
                              data-prefix="fac"
                              focusable="false"
                              role="img"
                              viewBox="0 0 32 32"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                class=""
                                d="M16 13v0c-2.761 0-5-2.239-5-5s2.239-5 5-5v0c2.761 0 5 2.239 5 5s-2.239 5-5 5zM16 14c3.314 0 6-2.686 6-6s-2.686-6-6-6v0c-3.314 0-6 2.686-6 6s2.686 6 6 6v0zM9 15.89h14c1.105 0 2 0.895 2 2v10.443h-18v-10.444c0-1.105 0.895-2 2-2zM26 17.889c0-1.657-1.343-3-3-3v0h-14c-1.657 0-3 1.343-3 3v0 11.444h20v-11.443z"
                                fill="currentColor"
                              />
                            </svg>
                             
                            <span
                              class="nav-link-text"
                            >
                              Contact
                            </span>
                          </a>
                           
                          <div
                            class="dropdown-menu mt-0"
                          >
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="Core.SetContactProperty"
                              href="#"
                            >
                              
                  Set Contact Property
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="Core.SetGroupMembership"
                              href="#"
                            >
                              
                  Set Group Membership
                
                            </a>
                             
                          </div>
                        </li>
                         
                        <li
                          class="nav-item dropdown"
                        >
                          <a
                            aria-expanded="false"
                            aria-haspopup="true"
                            class="nav-link dropdown-toggle"
                            data-toggle="dropdown"
                            href="#"
                            role="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="fa-btn big-icon svg-inline--fa fa-branching fa-w-16"
                              data-icon="branching"
                              data-prefix="fac"
                              focusable="false"
                              role="img"
                              viewBox="0 0 32 32"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                class=""
                                d="M12 4v4h-10v-4h10zM2 3c-0.552 0-1 0.448-1 1v0 4c0 0.552 0.448 1 1 1v0h10c0.552 0 1-0.448 1-1v0-4c0-0.552-0.448-1-1-1v0h-10zM26 4v4h-10v-4h10zM16 3c-0.552 0-1 0.448-1 1v0 4c0 0.552 0.448 1 1 1v0h10c0.552 0 1-0.448 1-1v0-4c0-0.552-0.448-1-1-1v0h-10zM20 14v4h-10v-4h10zM10 13c-0.552 0-1 0.448-1 1v0 4c0 0.552 0.448 1 1 1v0h10c0.552 0 1-0.448 1-1v0-4c0-0.552-0.448-1-1-1v0h-10zM30 24v4h-10v-4h10zM20 23c-0.552 0-1 0.448-1 1v0 4c0 0.552 0.448 1 1 1v0h10c0.552 0 1-0.448 1-1v0-4c0-0.552-0.448-1-1-1v0h-10z M15 6.5h-2.5v-1h2.5v1zM28.5 6.5h-2v-1h3v11.5h-8.5v-1h7.5v-9.5zM14.5 19h1v7h3.5v1h-4.5v-8z"
                                fill="currentColor"
                              />
                            </svg>
                             
                            <span
                              class="nav-link-text"
                            >
                              Branching
                            </span>
                          </a>
                           
                          <div
                            class="dropdown-menu mt-0"
                          >
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="Core.Case"
                              href="#"
                            >
                              
                  Case
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="Core.Output"
                              href="#"
                            >
                              
                  Output
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="Core.RunFlow"
                              href="#"
                            >
                              
                  Run Flow
                
                            </a>
                             
                          </div>
                        </li>
                         
                        <!---->
                         
                        <li
                          class="nav-item dropdown"
                        >
                          <a
                            aria-expanded="false"
                            aria-haspopup="true"
                            class="nav-link dropdown-toggle"
                            data-toggle="dropdown"
                            href="#"
                            role="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="fa-btn big-icon svg-inline--fa fa-developer fa-w-16"
                              data-icon="developer"
                              data-prefix="fac"
                              focusable="false"
                              role="img"
                              viewBox="0 0 32 32"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                class=""
                                d="M11.052 12.934c0-0 0-0 0-0 0-0.25-0.202-0.452-0.452-0.452-0.061 0-0.12 0.012-0.173 0.034l0.003-0.001-7.958 3.23c-0.279 0.116-0.471 0.386-0.471 0.701s0.192 0.585 0.466 0.699l0.005 0.002 7.958 3.23c0.050 0.021 0.108 0.033 0.169 0.033 0.25 0 0.452-0.203 0.452-0.452 0-0.189-0.116-0.351-0.28-0.418l-0.003-0.001-7.746-3.092 7.746-3.093c0.168-0.069 0.284-0.23 0.284-0.42 0-0 0-0 0-0v0zM12.319 25.385c-0.017 0.046-0.026 0.098-0.026 0.153 0 0.255 0.207 0.462 0.462 0.462 0.2 0 0.371-0.128 0.435-0.306l0.001-0.003 6.704-19.076c0.017-0.046 0.026-0.098 0.026-0.153 0-0.255-0.207-0.462-0.462-0.462-0.2 0-0.371 0.128-0.435 0.306l-0.001 0.003-6.704 19.076zM21.57 12.515c-0.053-0.024-0.116-0.038-0.181-0.038-0.25 0-0.452 0.202-0.452 0.452 0 0.193 0.122 0.358 0.292 0.423l0.003 0.001 7.746 3.093-7.746 3.092c-0.174 0.066-0.296 0.231-0.296 0.424 0 0.25 0.202 0.452 0.452 0.452 0.066 0 0.128-0.014 0.184-0.039l-0.003 0.001 7.958-3.229c0.279-0.116 0.471-0.386 0.471-0.701s-0.192-0.585-0.466-0.699l-0.005-0.002-7.958-3.23z"
                                fill="currentColor"
                              />
                            </svg>
                             
                            <span
                              class="nav-link-text"
                            >
                              Developer
                            </span>
                          </a>
                           
                          <div
                            class="dropdown-menu mt-0"
                          >
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="ConsoleIO.Print"
                              href="#"
                            >
                              
                  Print
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="ConsoleIO.Read"
                              href="#"
                            >
                              
                  Read
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="Core.Log"
                              href="#"
                            >
                              
                  Log
                
                            </a>
                             
                          </div>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
                 
                <div
                  class="tree-builder-toolbar-alerts w-100"
                >
                  <!---->
                   
                  <main
                    class="error-notifications-wrapper"
                  >
                    <!---->
                     
                    <!---->
                  </main>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots InteractionDesigner/Toolbar With Grouped Buttons Slot 1`] = `
<div>
  <div
    class="viamo-app-container flow-builder-sidebar-editor-container"
    id="viamo-app"
  >
    <div
      class="container-full"
    >
      <div
        class="main-content-container"
      >
        <section
          id="tree-app"
        >
          <div
            class="edit-tree"
            id="tree-interaction-designer"
          >
            <div
              class="interaction-designer-contents panel panel-default"
            >
              <div
                class="tree-builder-toolbar d-flex flex-column"
              >
                <div
                  class="tree-builder-toolbar-main-menu d-flex flex-column"
                >
                  <!---->
                   
                  <div
                    class="tree-workspace-panel-heading panel-heading w-100"
                  >
                    <div
                      class="tree-workspace-panel-heading-contents"
                    >
                      <div
                        class="btn-toolbar"
                      >
                        <h4
                          class="text-primary mr-4 flow-label"
                          title=""
                        >
                          
            
          
                        </h4>
                         
                        <div>
                          <a
                            aria-current="page"
                            class="mr-2 router-link-exact-active router-link-active"
                            href="#/"
                            title="Home"
                          >
                            <svg
                              aria-hidden="true"
                              class="fa-btn svg-inline--fa fa-home fa-w-16"
                              data-icon="home"
                              data-prefix="fac"
                              focusable="false"
                              role="img"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                class=""
                                d="M9.38843 22.559V15.3539H14.6058V22.559C14.6058 23.3515 15.1927 24 15.9101 24H19.8231C20.5405 24 21.1275 23.3515 21.1275 22.559V12.4719H23.3448C23.9448 12.4719 24.2318 11.6506 23.7753 11.2183L12.871 0.367457C12.3754 -0.122486 11.6188 -0.122486 11.1232 0.367457L0.218936 11.2183C-0.224539 11.6506 0.0493717 12.4719 0.649367 12.4719H2.86674V22.559C2.86674 23.3515 3.45369 24 4.17108 24H8.08409C8.80148 24 9.38843 23.3515 9.38843 22.559Z"
                                fill="currentColor"
                              />
                            </svg>
                          </a>
                           
                          <a
                            class="btn btn-primary btn-sm mr-2"
                            href="#/flows/new"
                          >
                            
              New Flow
            
                          </a>
                           
                          <button
                            class="btn btn-outline-primary btn-sm"
                          >
                            
              Edit Flow
            
                          </button>
                           
                          <!---->
                           
                          <div
                            class="vertical-divider"
                          />
                           
                          <a
                            class="btn btn-outline-primary btn-sm"
                            href="#/trees/1/resource-viewer"
                          >
                            
                Resources view
              
                          </a>
                           
                          <div
                            class="vertical-divider"
                          />
                           
                          <div
                            class="btn-group"
                          >
                            <a
                              class="btn btn-outline-primary btn-sm"
                              href="#/trees/1/interaction-designer/view"
                              title="Click to toggle editing"
                            >
                              
                View Mode
              
                            </a>
                             
                            <a
                              class="btn btn-outline-primary btn-sm active"
                              href="#/trees/1/interaction-designer/edit"
                              title="Click to toggle editing"
                            >
                              
                Edit Mode
              
                            </a>
                          </div>
                           
                        </div>
                         
                        <div
                          class="ml-auto mr-2"
                        >
                          <!---->
                           
                          <div
                            class="btn-group mr-2"
                          >
                            <a
                              class="btn btn-success btn-sm ml-4"
                              disabled="disabled"
                              href="#"
                              title="another grouped button"
                            >
                              
           Action X
        
                            </a>
                             
                            <a
                              class="btn btn-warning btn-sm"
                              href="#"
                              title="another grouped button"
                            >
                              
           Action Y
        
                            </a>
                          </div>
                           
                          <button
                            class="btn btn-outline-primary btn-sm"
                          >
                            
              Export
            
                          </button>
                           
                          <button
                            class="btn btn-info btn-sm tree-save-tree ml-4"
                            title="Save changes to the flow"
                            type="button"
                          >
                            
              Save
            
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                   
                  <div
                    class="tree-workspace-panel-heading panel-heading w-100 bg-white d-flex justify-content-start pt-0 pb-0"
                  >
                    <div
                      class="tree-workspace-panel-heading-contents"
                    >
                      <ul
                        class="nav"
                      >
                        <li
                          class="nav-item dropdown nav"
                        >
                          <a
                            aria-expanded="false"
                            aria-haspopup="true"
                            class="nav-link dropdown-toggle"
                            data-toggle="dropdown"
                            href="#"
                            role="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="fa-btn big-icon svg-inline--fa fa-content fa-w-16"
                              data-icon="content"
                              data-prefix="fac"
                              focusable="false"
                              role="img"
                              viewBox="0 0 32 32"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                class=""
                                d="M23 4v0c0.552 0 1 0.448 1 1v23c0 0.552-0.448 1-1 1h-14c-0.552 0-1-0.448-1-1v-23c0-0.552 0.448-1 1-1h14zM9 3c-1.105 0-2 0.895-2 2v0 23c0 1.105 0.895 2 2 2v0h14c1.105 0 2-0.895 2-2v0-23c0-1.105-0.895-2-2-2v0h-14z M19.7 7v0c0.552 0 1 0.448 1 1v13c0 0.552-0.448 1-1 1h-7.2c-0.552 0-1-0.448-1-1v-13c0-0.552 0.448-1 1-1h7.2zM12.5 6c-1.105 0-2 0.895-2 2v0 13c0 1.105 0.895 2 2 2v0h7.2c1.105 0 2-0.895 2-2v0-13c0-1.105-0.895-2-2-2v0h-7.2zM16 27v0c-0.552 0-1-0.448-1-1s0.448-1 1-1v0c0.552 0 1 0.448 1 1s-0.448 1-1 1zM16 28c1.105 0 2-0.895 2-2s-0.895-2-2-2v0c-1.105 0-2 0.895-2 2s0.895 2 2 2v0z"
                                fill="currentColor"
                              />
                            </svg>
                             
                            <span
                              class="nav-link-text"
                            >
                              Content
                            </span>
                          </a>
                           
                          <div
                            class="dropdown-menu mt-0"
                          >
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="MobilePrimitives.Message"
                              href="#"
                            >
                              
                  Message
                
                            </a>
                            <div
                              class="dropdown-divider"
                            />
                             
                            <a
                              class="dropdown-item"
                              data-block-type="MobilePrimitives.SelectOneResponse"
                              href="#"
                            >
                              
                  Select One Response
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="MobilePrimitives.SelectManyResponse"
                              href="#"
                            >
                              
                  Select Many Responses
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="MobilePrimitives.NumericResponse"
                              href="#"
                            >
                              
                  Numeric Response
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="MobilePrimitives.OpenResponse"
                              href="#"
                            >
                              
                  Open Response
                
                            </a>
                            <div
                              class="dropdown-divider"
                            />
                             
                            <a
                              class="dropdown-item"
                              data-block-type="SmartDevices.LocationResponse"
                              href="#"
                            >
                              
                  Location Response
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="SmartDevices.PhotoResponse"
                              href="#"
                            >
                              
                  Photo Response
                
                            </a>
                             
                          </div>
                        </li>
                         
                        <li
                          class="nav-item dropdown"
                        >
                          <a
                            aria-expanded="false"
                            aria-haspopup="true"
                            class="nav-link dropdown-toggle"
                            data-toggle="dropdown"
                            href="#"
                            role="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="fa-btn big-icon svg-inline--fa fa-contact fa-w-16"
                              data-icon="contact"
                              data-prefix="fac"
                              focusable="false"
                              role="img"
                              viewBox="0 0 32 32"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                class=""
                                d="M16 13v0c-2.761 0-5-2.239-5-5s2.239-5 5-5v0c2.761 0 5 2.239 5 5s-2.239 5-5 5zM16 14c3.314 0 6-2.686 6-6s-2.686-6-6-6v0c-3.314 0-6 2.686-6 6s2.686 6 6 6v0zM9 15.89h14c1.105 0 2 0.895 2 2v10.443h-18v-10.444c0-1.105 0.895-2 2-2zM26 17.889c0-1.657-1.343-3-3-3v0h-14c-1.657 0-3 1.343-3 3v0 11.444h20v-11.443z"
                                fill="currentColor"
                              />
                            </svg>
                             
                            <span
                              class="nav-link-text"
                            >
                              Contact
                            </span>
                          </a>
                           
                          <div
                            class="dropdown-menu mt-0"
                          >
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="Core.SetContactProperty"
                              href="#"
                            >
                              
                  Set Contact Property
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="Core.SetGroupMembership"
                              href="#"
                            >
                              
                  Set Group Membership
                
                            </a>
                             
                          </div>
                        </li>
                         
                        <li
                          class="nav-item dropdown"
                        >
                          <a
                            aria-expanded="false"
                            aria-haspopup="true"
                            class="nav-link dropdown-toggle"
                            data-toggle="dropdown"
                            href="#"
                            role="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="fa-btn big-icon svg-inline--fa fa-branching fa-w-16"
                              data-icon="branching"
                              data-prefix="fac"
                              focusable="false"
                              role="img"
                              viewBox="0 0 32 32"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                class=""
                                d="M12 4v4h-10v-4h10zM2 3c-0.552 0-1 0.448-1 1v0 4c0 0.552 0.448 1 1 1v0h10c0.552 0 1-0.448 1-1v0-4c0-0.552-0.448-1-1-1v0h-10zM26 4v4h-10v-4h10zM16 3c-0.552 0-1 0.448-1 1v0 4c0 0.552 0.448 1 1 1v0h10c0.552 0 1-0.448 1-1v0-4c0-0.552-0.448-1-1-1v0h-10zM20 14v4h-10v-4h10zM10 13c-0.552 0-1 0.448-1 1v0 4c0 0.552 0.448 1 1 1v0h10c0.552 0 1-0.448 1-1v0-4c0-0.552-0.448-1-1-1v0h-10zM30 24v4h-10v-4h10zM20 23c-0.552 0-1 0.448-1 1v0 4c0 0.552 0.448 1 1 1v0h10c0.552 0 1-0.448 1-1v0-4c0-0.552-0.448-1-1-1v0h-10z M15 6.5h-2.5v-1h2.5v1zM28.5 6.5h-2v-1h3v11.5h-8.5v-1h7.5v-9.5zM14.5 19h1v7h3.5v1h-4.5v-8z"
                                fill="currentColor"
                              />
                            </svg>
                             
                            <span
                              class="nav-link-text"
                            >
                              Branching
                            </span>
                          </a>
                           
                          <div
                            class="dropdown-menu mt-0"
                          >
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="Core.Case"
                              href="#"
                            >
                              
                  Case
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="Core.Output"
                              href="#"
                            >
                              
                  Output
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="Core.RunFlow"
                              href="#"
                            >
                              
                  Run Flow
                
                            </a>
                             
                          </div>
                        </li>
                         
                        <!---->
                         
                        <li
                          class="nav-item dropdown"
                        >
                          <a
                            aria-expanded="false"
                            aria-haspopup="true"
                            class="nav-link dropdown-toggle"
                            data-toggle="dropdown"
                            href="#"
                            role="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="fa-btn big-icon svg-inline--fa fa-developer fa-w-16"
                              data-icon="developer"
                              data-prefix="fac"
                              focusable="false"
                              role="img"
                              viewBox="0 0 32 32"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                class=""
                                d="M11.052 12.934c0-0 0-0 0-0 0-0.25-0.202-0.452-0.452-0.452-0.061 0-0.12 0.012-0.173 0.034l0.003-0.001-7.958 3.23c-0.279 0.116-0.471 0.386-0.471 0.701s0.192 0.585 0.466 0.699l0.005 0.002 7.958 3.23c0.050 0.021 0.108 0.033 0.169 0.033 0.25 0 0.452-0.203 0.452-0.452 0-0.189-0.116-0.351-0.28-0.418l-0.003-0.001-7.746-3.092 7.746-3.093c0.168-0.069 0.284-0.23 0.284-0.42 0-0 0-0 0-0v0zM12.319 25.385c-0.017 0.046-0.026 0.098-0.026 0.153 0 0.255 0.207 0.462 0.462 0.462 0.2 0 0.371-0.128 0.435-0.306l0.001-0.003 6.704-19.076c0.017-0.046 0.026-0.098 0.026-0.153 0-0.255-0.207-0.462-0.462-0.462-0.2 0-0.371 0.128-0.435 0.306l-0.001 0.003-6.704 19.076zM21.57 12.515c-0.053-0.024-0.116-0.038-0.181-0.038-0.25 0-0.452 0.202-0.452 0.452 0 0.193 0.122 0.358 0.292 0.423l0.003 0.001 7.746 3.093-7.746 3.092c-0.174 0.066-0.296 0.231-0.296 0.424 0 0.25 0.202 0.452 0.452 0.452 0.066 0 0.128-0.014 0.184-0.039l-0.003 0.001 7.958-3.229c0.279-0.116 0.471-0.386 0.471-0.701s-0.192-0.585-0.466-0.699l-0.005-0.002-7.958-3.23z"
                                fill="currentColor"
                              />
                            </svg>
                             
                            <span
                              class="nav-link-text"
                            >
                              Developer
                            </span>
                          </a>
                           
                          <div
                            class="dropdown-menu mt-0"
                          >
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="ConsoleIO.Print"
                              href="#"
                            >
                              
                  Print
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="ConsoleIO.Read"
                              href="#"
                            >
                              
                  Read
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="Core.Log"
                              href="#"
                            >
                              
                  Log
                
                            </a>
                             
                          </div>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
                 
                <div
                  class="tree-builder-toolbar-alerts w-100"
                >
                  <!---->
                   
                  <main
                    class="error-notifications-wrapper"
                  >
                    <!---->
                     
                    <!---->
                  </main>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots InteractionDesigner/Toolbar With Save Button 1`] = `
<div>
  <div
    class="viamo-app-container flow-builder-sidebar-editor-container"
    id="viamo-app"
  >
    <div
      class="container-full"
    >
      <div
        class="main-content-container"
      >
        <section
          id="tree-app"
        >
          <div
            class="edit-tree"
            id="tree-interaction-designer"
          >
            <div
              class="interaction-designer-contents panel panel-default"
            >
              <div
                class="tree-builder-toolbar d-flex flex-column"
              >
                <div
                  class="tree-builder-toolbar-main-menu d-flex flex-column"
                >
                  <!---->
                   
                  <div
                    class="tree-workspace-panel-heading panel-heading w-100"
                  >
                    <div
                      class="tree-workspace-panel-heading-contents"
                    >
                      <div
                        class="btn-toolbar"
                      >
                        <h4
                          class="text-primary mr-4 flow-label"
                          title=""
                        >
                          
            
          
                        </h4>
                         
                        <div>
                          <a
                            aria-current="page"
                            class="mr-2 router-link-exact-active router-link-active"
                            href="#/"
                            title="Home"
                          >
                            <svg
                              aria-hidden="true"
                              class="fa-btn svg-inline--fa fa-home fa-w-16"
                              data-icon="home"
                              data-prefix="fac"
                              focusable="false"
                              role="img"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                class=""
                                d="M9.38843 22.559V15.3539H14.6058V22.559C14.6058 23.3515 15.1927 24 15.9101 24H19.8231C20.5405 24 21.1275 23.3515 21.1275 22.559V12.4719H23.3448C23.9448 12.4719 24.2318 11.6506 23.7753 11.2183L12.871 0.367457C12.3754 -0.122486 11.6188 -0.122486 11.1232 0.367457L0.218936 11.2183C-0.224539 11.6506 0.0493717 12.4719 0.649367 12.4719H2.86674V22.559C2.86674 23.3515 3.45369 24 4.17108 24H8.08409C8.80148 24 9.38843 23.3515 9.38843 22.559Z"
                                fill="currentColor"
                              />
                            </svg>
                          </a>
                           
                          <a
                            class="btn btn-primary btn-sm mr-2"
                            href="#/flows/new"
                          >
                            
              New Flow
            
                          </a>
                           
                          <button
                            class="btn btn-outline-primary btn-sm"
                          >
                            
              Edit Flow
            
                          </button>
                           
                          <!---->
                           
                          <div
                            class="vertical-divider"
                          />
                           
                          <a
                            class="btn btn-outline-primary btn-sm"
                            href="#/trees/1/resource-viewer"
                          >
                            
                Resources view
              
                          </a>
                           
                          <div
                            class="vertical-divider"
                          />
                           
                          <div
                            class="btn-group"
                          >
                            <a
                              class="btn btn-outline-primary btn-sm"
                              href="#/trees/1/interaction-designer/view"
                              title="Click to toggle editing"
                            >
                              
                View Mode
              
                            </a>
                             
                            <a
                              class="btn btn-outline-primary btn-sm active"
                              href="#/trees/1/interaction-designer/edit"
                              title="Click to toggle editing"
                            >
                              
                Edit Mode
              
                            </a>
                          </div>
                           
                        </div>
                         
                        <div
                          class="ml-auto mr-2"
                        >
                          <!---->
                           
                          <div
                            class="btn-group mr-2"
                          />
                           
                          <button
                            class="btn btn-outline-primary btn-sm"
                          >
                            
              Export
            
                          </button>
                           
                          <!---->
                        </div>
                      </div>
                    </div>
                  </div>
                   
                  <div
                    class="tree-workspace-panel-heading panel-heading w-100 bg-white d-flex justify-content-start pt-0 pb-0"
                  >
                    <div
                      class="tree-workspace-panel-heading-contents"
                    >
                      <ul
                        class="nav"
                      >
                        <li
                          class="nav-item dropdown nav"
                        >
                          <a
                            aria-expanded="false"
                            aria-haspopup="true"
                            class="nav-link dropdown-toggle"
                            data-toggle="dropdown"
                            href="#"
                            role="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="fa-btn big-icon svg-inline--fa fa-content fa-w-16"
                              data-icon="content"
                              data-prefix="fac"
                              focusable="false"
                              role="img"
                              viewBox="0 0 32 32"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                class=""
                                d="M23 4v0c0.552 0 1 0.448 1 1v23c0 0.552-0.448 1-1 1h-14c-0.552 0-1-0.448-1-1v-23c0-0.552 0.448-1 1-1h14zM9 3c-1.105 0-2 0.895-2 2v0 23c0 1.105 0.895 2 2 2v0h14c1.105 0 2-0.895 2-2v0-23c0-1.105-0.895-2-2-2v0h-14z M19.7 7v0c0.552 0 1 0.448 1 1v13c0 0.552-0.448 1-1 1h-7.2c-0.552 0-1-0.448-1-1v-13c0-0.552 0.448-1 1-1h7.2zM12.5 6c-1.105 0-2 0.895-2 2v0 13c0 1.105 0.895 2 2 2v0h7.2c1.105 0 2-0.895 2-2v0-13c0-1.105-0.895-2-2-2v0h-7.2zM16 27v0c-0.552 0-1-0.448-1-1s0.448-1 1-1v0c0.552 0 1 0.448 1 1s-0.448 1-1 1zM16 28c1.105 0 2-0.895 2-2s-0.895-2-2-2v0c-1.105 0-2 0.895-2 2s0.895 2 2 2v0z"
                                fill="currentColor"
                              />
                            </svg>
                             
                            <span
                              class="nav-link-text"
                            >
                              Content
                            </span>
                          </a>
                           
                          <div
                            class="dropdown-menu mt-0"
                          >
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="MobilePrimitives.Message"
                              href="#"
                            >
                              
                  Message
                
                            </a>
                            <div
                              class="dropdown-divider"
                            />
                             
                            <a
                              class="dropdown-item"
                              data-block-type="MobilePrimitives.SelectOneResponse"
                              href="#"
                            >
                              
                  Select One Response
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="MobilePrimitives.SelectManyResponse"
                              href="#"
                            >
                              
                  Select Many Responses
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="MobilePrimitives.NumericResponse"
                              href="#"
                            >
                              
                  Numeric Response
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="MobilePrimitives.OpenResponse"
                              href="#"
                            >
                              
                  Open Response
                
                            </a>
                            <div
                              class="dropdown-divider"
                            />
                             
                            <a
                              class="dropdown-item"
                              data-block-type="SmartDevices.LocationResponse"
                              href="#"
                            >
                              
                  Location Response
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="SmartDevices.PhotoResponse"
                              href="#"
                            >
                              
                  Photo Response
                
                            </a>
                             
                          </div>
                        </li>
                         
                        <li
                          class="nav-item dropdown"
                        >
                          <a
                            aria-expanded="false"
                            aria-haspopup="true"
                            class="nav-link dropdown-toggle"
                            data-toggle="dropdown"
                            href="#"
                            role="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="fa-btn big-icon svg-inline--fa fa-contact fa-w-16"
                              data-icon="contact"
                              data-prefix="fac"
                              focusable="false"
                              role="img"
                              viewBox="0 0 32 32"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                class=""
                                d="M16 13v0c-2.761 0-5-2.239-5-5s2.239-5 5-5v0c2.761 0 5 2.239 5 5s-2.239 5-5 5zM16 14c3.314 0 6-2.686 6-6s-2.686-6-6-6v0c-3.314 0-6 2.686-6 6s2.686 6 6 6v0zM9 15.89h14c1.105 0 2 0.895 2 2v10.443h-18v-10.444c0-1.105 0.895-2 2-2zM26 17.889c0-1.657-1.343-3-3-3v0h-14c-1.657 0-3 1.343-3 3v0 11.444h20v-11.443z"
                                fill="currentColor"
                              />
                            </svg>
                             
                            <span
                              class="nav-link-text"
                            >
                              Contact
                            </span>
                          </a>
                           
                          <div
                            class="dropdown-menu mt-0"
                          >
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="Core.SetContactProperty"
                              href="#"
                            >
                              
                  Set Contact Property
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="Core.SetGroupMembership"
                              href="#"
                            >
                              
                  Set Group Membership
                
                            </a>
                             
                          </div>
                        </li>
                         
                        <li
                          class="nav-item dropdown"
                        >
                          <a
                            aria-expanded="false"
                            aria-haspopup="true"
                            class="nav-link dropdown-toggle"
                            data-toggle="dropdown"
                            href="#"
                            role="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="fa-btn big-icon svg-inline--fa fa-branching fa-w-16"
                              data-icon="branching"
                              data-prefix="fac"
                              focusable="false"
                              role="img"
                              viewBox="0 0 32 32"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                class=""
                                d="M12 4v4h-10v-4h10zM2 3c-0.552 0-1 0.448-1 1v0 4c0 0.552 0.448 1 1 1v0h10c0.552 0 1-0.448 1-1v0-4c0-0.552-0.448-1-1-1v0h-10zM26 4v4h-10v-4h10zM16 3c-0.552 0-1 0.448-1 1v0 4c0 0.552 0.448 1 1 1v0h10c0.552 0 1-0.448 1-1v0-4c0-0.552-0.448-1-1-1v0h-10zM20 14v4h-10v-4h10zM10 13c-0.552 0-1 0.448-1 1v0 4c0 0.552 0.448 1 1 1v0h10c0.552 0 1-0.448 1-1v0-4c0-0.552-0.448-1-1-1v0h-10zM30 24v4h-10v-4h10zM20 23c-0.552 0-1 0.448-1 1v0 4c0 0.552 0.448 1 1 1v0h10c0.552 0 1-0.448 1-1v0-4c0-0.552-0.448-1-1-1v0h-10z M15 6.5h-2.5v-1h2.5v1zM28.5 6.5h-2v-1h3v11.5h-8.5v-1h7.5v-9.5zM14.5 19h1v7h3.5v1h-4.5v-8z"
                                fill="currentColor"
                              />
                            </svg>
                             
                            <span
                              class="nav-link-text"
                            >
                              Branching
                            </span>
                          </a>
                           
                          <div
                            class="dropdown-menu mt-0"
                          >
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="Core.Case"
                              href="#"
                            >
                              
                  Case
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="Core.Output"
                              href="#"
                            >
                              
                  Output
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="Core.RunFlow"
                              href="#"
                            >
                              
                  Run Flow
                
                            </a>
                             
                          </div>
                        </li>
                         
                        <!---->
                         
                        <li
                          class="nav-item dropdown"
                        >
                          <a
                            aria-expanded="false"
                            aria-haspopup="true"
                            class="nav-link dropdown-toggle"
                            data-toggle="dropdown"
                            href="#"
                            role="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="fa-btn big-icon svg-inline--fa fa-developer fa-w-16"
                              data-icon="developer"
                              data-prefix="fac"
                              focusable="false"
                              role="img"
                              viewBox="0 0 32 32"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                class=""
                                d="M11.052 12.934c0-0 0-0 0-0 0-0.25-0.202-0.452-0.452-0.452-0.061 0-0.12 0.012-0.173 0.034l0.003-0.001-7.958 3.23c-0.279 0.116-0.471 0.386-0.471 0.701s0.192 0.585 0.466 0.699l0.005 0.002 7.958 3.23c0.050 0.021 0.108 0.033 0.169 0.033 0.25 0 0.452-0.203 0.452-0.452 0-0.189-0.116-0.351-0.28-0.418l-0.003-0.001-7.746-3.092 7.746-3.093c0.168-0.069 0.284-0.23 0.284-0.42 0-0 0-0 0-0v0zM12.319 25.385c-0.017 0.046-0.026 0.098-0.026 0.153 0 0.255 0.207 0.462 0.462 0.462 0.2 0 0.371-0.128 0.435-0.306l0.001-0.003 6.704-19.076c0.017-0.046 0.026-0.098 0.026-0.153 0-0.255-0.207-0.462-0.462-0.462-0.2 0-0.371 0.128-0.435 0.306l-0.001 0.003-6.704 19.076zM21.57 12.515c-0.053-0.024-0.116-0.038-0.181-0.038-0.25 0-0.452 0.202-0.452 0.452 0 0.193 0.122 0.358 0.292 0.423l0.003 0.001 7.746 3.093-7.746 3.092c-0.174 0.066-0.296 0.231-0.296 0.424 0 0.25 0.202 0.452 0.452 0.452 0.066 0 0.128-0.014 0.184-0.039l-0.003 0.001 7.958-3.229c0.279-0.116 0.471-0.386 0.471-0.701s-0.192-0.585-0.466-0.699l-0.005-0.002-7.958-3.23z"
                                fill="currentColor"
                              />
                            </svg>
                             
                            <span
                              class="nav-link-text"
                            >
                              Developer
                            </span>
                          </a>
                           
                          <div
                            class="dropdown-menu mt-0"
                          >
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="ConsoleIO.Print"
                              href="#"
                            >
                              
                  Print
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="ConsoleIO.Read"
                              href="#"
                            >
                              
                  Read
                
                            </a>
                            <!---->
                             
                            <a
                              class="dropdown-item"
                              data-block-type="Core.Log"
                              href="#"
                            >
                              
                  Log
                
                            </a>
                             
                          </div>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
                 
                <div
                  class="tree-builder-toolbar-alerts w-100"
                >
                  <!---->
                   
                  <main
                    class="error-notifications-wrapper"
                  >
                    <!---->
                     
                    <!---->
                  </main>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots InteractionDesigner/Toolbar Without Resource Editor Toggle 1`] = `
<div>
  <div
    class="viamo-app-container flow-builder-sidebar-editor-container"
    id="viamo-app"
  >
    <div
      class="container-full"
    >
      <div
        class="main-content-container"
      >
        <section
          id="tree-app"
        >
          <div
            class="edit-tree"
            id="tree-interaction-designer"
          >
            <div
              class="interaction-designer-contents panel panel-default"
            >
              <div
                class="tree-builder-toolbar d-flex flex-column"
              >
                <div
                  class="tree-builder-toolbar-main-menu d-flex flex-column"
                >
                  <!---->
                   
                  <div
                    class="tree-workspace-panel-heading panel-heading w-100"
                  >
                    <div
                      class="tree-workspace-panel-heading-contents"
                    >
                      <div
                        class="btn-toolbar"
                      >
                        <h4
                          class="text-primary mr-4 flow-label"
                          title=""
                        >
                          
            
          
                        </h4>
                         
                        <div>
                          <a
                            aria-current="page"
                            class="mr-2 router-link-exact-active router-link-active"
                            href="#/"
                            title="Home"
                          >
                            <svg
                              aria-hidden="true"
                              class="fa-btn svg-inline--fa fa-home fa-w-16"
                              data-icon="home"
                              data-prefix="fac"
                              focusable="false"
                              role="img"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                class=""
                                d="M9.38843 22.559V15.3539H14.6058V22.559C14.6058 23.3515 15.1927 24 15.9101 24H19.8231C20.5405 24 21.1275 23.3515 21.1275 22.559V12.4719H23.3448C23.9448 12.4719 24.2318 11.6506 23.7753 11.2183L12.871 0.367457C12.3754 -0.122486 11.6188 -0.122486 11.1232 0.367457L0.218936 11.2183C-0.224539 11.6506 0.0493717 12.4719 0.649367 12.4719H2.86674V22.559C2.86674 23.3515 3.45369 24 4.17108 24H8.08409C8.80148 24 9.38843 23.3515 9.38843 22.559Z"
                                fill="currentColor"
                              />
                            </svg>
                          </a>
                           
                          <a
                            class="btn btn-primary btn-sm mr-2"
                            href="#/flows/new"
                          >
                            
              New Flow
            
                          </a>
                           
                          <button
                            class="btn btn-outline-primary btn-sm"
                          >
                            
              Edit Flow
            
                          </button>
                           
                          <!---->
                           
                          <div
                            class="vertical-divider"
                          />
                           
                          <a
                            class="btn btn-outline-primary btn-sm"
                            href="#/trees/1/resource-viewer"
                          >
                            
                Resources view
              
                          </a>
                           
                          <div
                            class="vertical-divider"
                          />
                           
                          <div
                            class="btn-group"
                          >
                            <a
                              class="btn btn-outline-primary btn-sm active"
                              href="#/trees/1/interaction-designer/view"
                              title="Click to toggle editing"
                            >
                              
                View Mode
              
                            </a>
                             
                            <a
                              class="btn btn-outline-primary btn-sm"
                              href="#/trees/1/interaction-designer/edit"
                              title="Click to toggle editing"
                            >
                              
                Edit Mode
              
                            </a>
                          </div>
                           
                        </div>
                         
                        <div
                          class="ml-auto mr-2"
                        >
                          <!---->
                           
                          <div
                            class="btn-group mr-2"
                          />
                           
                          <button
                            class="btn btn-outline-primary btn-sm"
                          >
                            
              Export
            
                          </button>
                           
                          <!---->
                        </div>
                      </div>
                    </div>
                  </div>
                   
                  <!---->
                </div>
                 
                <div
                  class="tree-builder-toolbar-alerts w-100"
                >
                  <!---->
                   
                  <main
                    class="error-notifications-wrapper"
                  >
                    <!---->
                     
                    <!---->
                  </main>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots MobilePrimitives/Message Block Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/Message Block Existing Data Block 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/Message Block Non Starting Block 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/Numeric Response Block Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/Numeric Response Block Existing Data For All Modes 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/Numeric Response Block Existing Data For Ivr Only 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/Numeric Response Block Existing Data For Text Only 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/Numeric Response Block Non Starting Block 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/Open Response Block Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/Open Response Block Existing Data For All Modes 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/Open Response Block Existing Data For Ivr Only 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/Open Response Block Existing Data For Text Only 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/Open Response Block Non Starting Block 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/SelectOneResponseBlock Existing Data 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/SelectOneResponseBlock In Flow Builder 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/SelectOneResponseBlock Ivr Only 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/SelectOneResponseBlock More Languages 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/selectManyResponseBlock Existing Data 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/selectManyResponseBlock In Flow Builder 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/selectManyResponseBlock Ivr Only 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/selectManyResponseBlock More Languages 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots SmartDevices/Location Response Block Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots SmartDevices/Location Response Block Existing Data Pre Filled 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots SmartDevices/Location Response Block Non Starting Block 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots SmartDevices/Photo Response Block Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots SmartDevices/Photo Response Block Existing Data Pre Filled 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots SmartDevices/Photo Response Block Non Starting Block 1`] = `
<div>
  <!---->
</div>
`;
